syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 229
// EnetChannelId: 0
// EnetIsReliable: true
message SceneAreaWeatherNotify {
	uint32 weather_gadget_id = 13;
	map<uint32, string> weather_value_map = 10;
	uint32 weather_area_id = 15;
	uint32 climate_type = 14;
	float trans_duration = 11;
}
